# video-classification

./: export_onnx.py  kinetics_classes.py  leap.yaml  leap_binder.py  leap_config.py  leap_config.yaml  leap_custom_test.py  leap_data_utils.py  leap_mapping.yaml  leap_metadata.py  leap_metrics.py  leap_visualizers.py  pyproject.toml  readme.md  requirements.txt  tensorleap_setup.md
pytorchvideo/data/: labeled_video_dataset.py
pytorchvideo/transforms/: functional.py  transforms.py
